# Chronolock-React-Rust

./: .gitignore  .gitpod.yml  .ic-assets.json5  CANISTER_PERFORMANCE_ANALYSIS.md  CYCLES-ANALYSIS.md  CYCLES_ANALYSIS.md  Cargo.toml  DEMO_SCRIPT.md  DEMO_SPEECH.md  DEPLOYMENT.md  README.md  canister_ids.json  crnl_ledger.did  dfx.ic.json  dfx.json  dfx.local.json  generate_init_args.sh  generate_ledger_init_args.sh  manage_identities.sh  package-lock.json  package.json  pnpm-lock.yaml  setup-backend.sh  watch-and-deploy-all.sh
.devcontainer/: devcontainer.json
backend/: Cargo.toml  backend.did
backend/src/: lib.rs
docs/: ENCRYPTION_AND_DECRYPTION.md
src/: App.tsx
src/backend/chainkey_testing_canister/: Cargo.toml  chainkey_testing_canister.did
src/backend/chainkey_testing_canister/src/: lib.rs  vetkd.rs
src/backend/chainkey_testing_canister/tests/: canister_tests.rs
src/backend/chronolock/: Cargo.toml  chronolock.did  chronolock_init_args.did  init_args.did
src/backend/chronolock/src/: lib.rs
src/backend/chronolock/tests/: canister_tests.rs
src/backend/chronolock_canister/: Cargo.toml  chronolock_canister.did  chronolock_init_args.did
src/backend/chronolock_canister/src/: lib.rs
src/backend/chronolock_canister/tests/: auth_canister_tests.rs  canister_tests.rs
src/backend/crnl_ledger/: Cargo.toml  crnl_ledger.did  init_args.did  ledger_init_args.did
src/backend/crnl_ledger/src/: lib.rs  lib_no_dummy.rs  lib_with_dummy.rs  users.did
src/backend/crnl_ledger/tests/: canister_tests.rs
src/backend/crnl_ledger_canister/: Cargo.toml  crnl_ledger_canister.did  ledger_init_args.did
src/backend/crnl_ledger_canister/src/: lib.rs  lib_no_dummy.rs
src/backend/crnl_ledger_canister/tests/: auth_canister_tests.rs  canister_tests.rs
src/backend/hello_world/: Cargo.toml
src/backend/hello_world/src/: lib.rs
src/backend/hello_world/tests/: canister_tests.rs
src/backend/vetkd_mock/: Cargo.toml  vetkd_mock.did
src/backend/vetkd_mock/src/: lib.rs
src/frontend/: index.html  main.tsx  setupTests.ts  tsconfig.json  vite-env.d.ts  vite.config.ts
src/frontend/public/: .ic-assets.json5
src/frontend/src/: ActorContextProvider.tsx  App.tsx  _Sample.tsx
src/frontend/src/components/: About.tsx  Clock.tsx  Collection.tsx  Counter.tsx  Faqs.tsx  Footer.tsx  FunFacts.tsx  Header.tsx  HeroSlider.tsx  NotFound.tsx  PreLoader.tsx  RoadMapSlider.tsx  SectionsDevider.tsx
src/frontend/src/components/collection/: AllChronolocks.tsx  ChronolockCard.tsx  DecryptModal.tsx  DecryptableChronolocks.tsx  MyChronolocks.tsx
src/frontend/src/components/create/: Details.tsx  ReviewAndCreate.tsx  Stepper.tsx  (+2 more)
src/frontend/src/hooks/: useActorReact.ts  useAuth.ts  useChronolock.ts  useCrnlToken.ts  useFunFactsStats.ts  useLockTimer.ts  useMenuClick.ts
src/frontend/src/pages/: Chronolock.tsx  ChronolockDetail.tsx  Collection.tsx  Cookies.tsx  Create.tsx  Details.tsx  Home.tsx  Policy.tsx  TermsConditions.tsx
src/frontend/src/styles/: clock.css  style.css
src/frontend/src/utils/: sliderProps.ts  utility.ts
src/frontend/tests/: ActorContextProvider.test.tsx  Clock.test.tsx  Counter.test.tsx  Home.test.tsx  NotFound.test.tsx  Test.test.tsx  utils.test.tsx
(+6 files in other folders)
