[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "=0.22.1"
candid = "=0.10.13"
evm-rpc-canister-types = "=4.0.1"
hex = "=0.4.3"
ic-cdk = "=0.17.1"
ic-cdk-macros = "=0.17.1"
ic-cdk-timers = "=0.11.0"
ic-ledger-types = "=0.14.0"
ic-stable-structures = "=0.6.7"
ic-types = "=0.7.0"
icrc-ledger-types = "=0.1.8"
serde = "=1.0.210"
serde_bytes = "=0.11.15"
sha2 = "=0.10.8"
