[package]
name = "chronolock"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.13"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"

[dev-dependencies]
pocket-ic = "7.0.0"
