[package]
name = "chronolock_canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
sha2 = "0.10.9"
candid = "0.10.10"
ic-cdk = "0.17.1"
ic-cdk-macros = "0.17.1"
ic-stable-structures = "0.6"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
ic-crypto-internal-bls12-381-type = { git = "https://github.com/dfinity/ic" }
ic-vetkd-utils = { git = "https://github.com/dfinity/ic", rev = "95231520" }
serde_bytes = "0.11.17"
serde_json = "1.0.140"
base64 = "0.21"

[dev-dependencies]
pocket-ic = "7.0.0"
base64 = "0.21"
