[package]
name = "crnl_ledger"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.10"
ic-cdk = "0.17.1"
ic-cdk-macros = "0.17.1"
ic-stable-structures = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
num-traits = "0.2.19"
sha2 = "0.10.9"
futures = "0.3.31"

[dev-dependencies]
pocket-ic = "7.0.0"
